# codot-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  README_streamlit_cloud.md  app.py  docker-compose.yml  generate_static_report.py  heroku.yml  production_setup.md  pyproject.toml  requirements.txt  start_production.sh
.github/workflows/: etl.yml
data/: municipality_master.csv
lib/: __init__.py  ai_comment.py  etl.py  kpi.py
scripts/: download_last_codot.sh
tests/: __init__.py
