[tool.poetry]
name = "codot_dashboard"
version = "0.1.0"
description = "Dashboard for Codot analytics"
authors = ["User <user@example.com>"]
readme = "README.md"
packages = [{include = "lib"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.0.0"
plotly = "^5.0.0"
streamlit = "^1.28.0"
prophet = "^1.1.0"
openai = "^1.0.0"
sqlite-utils = "^3.34.0"
openpyxl = "^3.1.0"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 